		from working (thanks DDEM)
	- Fixed more problems with >4GB files in windows (thanks Nooby)
	- Fixed a bug in the NFS line sieve (thanks Erik Branger)
	- Simplify the inner loop of the QS hashtable sieving code;
		modern processors run QS noticeably faster now
		(thanks Mick Francis)
	- Added a slight speedup for NFS relation parsing (thanks Lionel Debroux)

Version 1.52: 2/4/14
	- Added a major overhaul of the liner algebra; this uses the
		thread pool with tighter coordination between threads
		and much-reduced memory use. On a fast modern processor 
		with big caches the new code is 30% faster, and the speedup 
		increases with more threads
	- Added the ability to start the NFS linear algebra after using
		the CADO-NFS suite for filtering (thanks Paul Zimmermann)
	- Fixed a bug in the MPI code that makes Nx1 and 1xN grids work again
	- Fixed 32-bit overflow problems in the NFS square root (thanks Greg 
		Childers)
	- Fixed problems parsing arguments in the NFS square root (thanks
		Carlos Pinho / Lionel Debroux)
	- Fixed a typo in the threadpool that caused races when shutting down
	- Turned off asm in QS when compiling debug builds
	- Fixed a buffer overflow parsing large inputs (thanks Ryan Propper)
	- Fixed Windows CPU time measurement (thanks Roman Rusakov)
	- Modified makefiles to account for environment vars in CUDA 5.5


Version 1.51: 2/17/13
	- Performed another massive overhaul of the GPU polynomial selection
		code; stage 1 now runs dozens to *hundreds* of times faster
		on a GPU
	- Added a thread pool implementation, and made GPU polynomial 
		selection multithread-capable. Eventually the CPU code should
		be overhauled to look more like the GPU code, it will 
		probably be able to run several times faster
	- Split stage 2 of NFS polynomial selection into the size optimization
		and root optimization portions, which can be invoked inde-
		pendently from the demo binary
	- Added a caching layer for reading in the matrix, to reduce the